# kgn

./: .all-contributorsrc  .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  GUIDE.md  GUIDE_KO.md  README.md  README_KO.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
examples/: decision-example.kgn  edges-example.kge  goal-example.kgn  spec-example.kgn
kgn/: __init__.py  errors.py
kgn/cli/: __init__.py  _agent.py  _app.py  _conflict.py  _core.py  _embed.py  _git.py  _graph.py  _lsp.py  _mcp.py  _query.py  _sync.py  _task.py  _web.py  _workflow.py
kgn/conflict/: __init__.py  service.py
kgn/db/: connection.py  migrations.py  repository.py
kgn/embedding/: __init__.py  client.py  factory.py  service.py
kgn/git/: __init__.py  branch.py  service.py
kgn/github/: __init__.py  client.py  pr_service.py  sync_service.py
kgn/graph/: __init__.py  health.py  mermaid.py  subgraph.py
kgn/ingest/: __init__.py  service.py
kgn/logging/: __init__.py  config.py
kgn/lsp/: __init__.py  codelens.py  completion.py  diagnostics.py  hover.py  indexer.py  position.py  server.py  subgraph_handler.py  tokens.py
kgn/mcp/: __init__.py  _helpers.py  _state.py  server.py
kgn/migrations/: 001_init_enums.sql  002_init_tables.sql  003_init_indexes.sql  004_embeddings.sql  005_edge_status.sql  006_task_queue.sql  007_agent_roles.sql  008_node_locks.sql  009_conflict_activity_types.sql  010_node_versions_full_snapshot.sql  __init__.py
kgn/models/: __init__.py  edge.py  enums.py  node.py
kgn/orchestration/: __init__.py  conflict_resolution.py  handoff.py  locking.py  matching.py  observability.py  roles.py  templates.py  workflow.py
kgn/parser/: __init__.py  (+4 more)
tests/: conftest.py  helpers.py  test_branch.py  test_cli_core.py  test_cli_coverage.py  test_cli_git.py  test_cli_graph.py  test_cli_kgnerror.py  test_cli_sync.py  test_config_env.py  test_conflict.py  test_conflict_resolution.py  test_db_resilience.py  test_dependency.py  test_e2e.py  test_e2e_phase10.py  test_e2e_phase12.py  test_e2e_phase2.py  test_e2e_phase3.py  test_e2e_phase4.py  test_e2e_phase5.py  test_e2e_phase6.py  test_e2e_phase9.py  test_e2e_step8.py  test_embed_cli.py  test_embedding.py  test_embedding_client.py  test_embedding_factory.py  test_error_codes.py  test_error_handling.py  test_git_edge_cases.py  test_git_service.py  test_github_client.py  test_github_integration.py  test_github_sync.py  test_handoff.py  test_handoff_formatter.py  test_health.py  test_indexer.py  test_ingest.py  (+46 more)
vscode-kgn/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
(+66 files in other folders)
