[project]
name = "kgn-mcp"
dynamic = ["version"]
description = "CLI tool for parsing .kgn/.kge files, ingesting them into a PostgreSQL knowledge graph DB, and generating AI agent context packages via subgraph queries"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Haenam Park", email = "baobab00@users.noreply.github.com" },
]
keywords = ["knowledge-graph", "cli", "mcp", "ai-agent", "postgresql", "pgvector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "psycopg-pool>=3.3.0",
    "mcp>=1.26.0",
    "structlog>=24.0",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/baobab00/kgn"
Repository = "https://github.com/baobab00/kgn"
Documentation = "https://github.com/baobab00/kgn#readme"
"Bug Tracker" = "https://github.com/baobab00/kgn/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "jinja2>=3.1"]
lsp = ["pygls>=2.0"]

[project.scripts]
kgn = "kgn.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "build>=1.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests: allow UpperCase mock names (N806), long assertion strings (E501),
# and top-of-file import patterns used with conditional skips (E402).
"tests/**" = ["N806", "E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
markers = [
    "github: marks tests requiring real GitHub API (deselect with '-m \"not github\"')",
]

[tool.coverage.run]
source = ["kgn"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise typer.Exit",
    "@app\\.callback",
    "def _project_not_found",
    "except typer\\.Exit",
]
# Partial branches that are not expected to be fully covered
partial_branches = [
    "pragma: no branch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "kgn/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["kgn"]
